--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -5,15 +5,29 @@
     <h1>Sign Up</h1>
     <form>
         <div class="form-group">
-            <label for="email">Email</label>
-            <input type="text" name="email" class="form-control" placeholder="Email" />
-            <label for="username">Username</label>
+            <!-- <label for="email">Email</label>
+            <input type="text" name="email" class="form-control" placeholder="Email" /> -->
+            {{ form.email.label }}
+            {{ form.email(class="form-control" placeholder="Email") }}
+
+            {{ form.username.label }}
+            {{ form.username(class="form-control" placeholder="Username") }}
+
+            {{ form.password.label }}
+            {{ form.password(class="form-control" placeholder="Password") }}
+
+            {{ form.confirm_pass.label }}
+            {{ form.confirm_pass(class="form-control" placeholder="Confirm Password") }}
+
+            {{ form.email.label }}
+            {{ form.submit(class="btn btn-primary w-100") }}
+            <!-- <label for="username">Username</label>
             <input type="text" name="username" class="form-control" placeholder="Username" />
             <label for="password">Password</label>
             <input type="password" name="passwod" class="form-control" placeholder="Password" />
             <label for="confirmPass">Confirm Password</label>
             <input type="password" name="confirmPass" class="form-control" placeholder="Confirm Password" />
-            <input type="submit" class="btn btn-primary w-100" />
+            <input type="submit" class="btn btn-primary w-100" /> -->
         </div>
     </form>
 {% endblock content %}  
